JEDIT VERSION HISTORY

* Version 2.3pre3

+ Enhancements

- Buffer tabs position (top, left, right, bottom) can now be set

+ Bug Fixes

- Buffer tabs are now implemented differently, and should work better

* Version 2.3pre2

+ New Features

- File->Current Directory menu lists all files in current directory, selecting
  a file will open it
- To Upper Case, To Lower Case and Select Word actions from TextTools plugin
  moved into the core (TextTools was written by Mike Dillon)
- New Select Line, Select Paragraph actions (mainly useful in macros)
- PostScript syntax highlighting for .ps files (Ralf Engels)
- EditorStarting message sent after jEdit has finished starting up, but
  before first view is created
- EditorExiting message sent when exiting, after plugin stop() methods
  are called, but before user properties, etc are saved
- If enabled in Utilities->Global Options, the buffer list will be kept
  sorted
- You can double-click-drag to extend the selection a word at a time, and
  triple-click-drag to extend it a line at a time
- BufferTabs plugin integrated into the core
- Useful for plugin developers: you can now set the console log level
  by specifying a digit (1-9) as the first command line parameter to
  jEdit. For example, run 'jedit 1' to get all logged info printed to
  the terminal

+ Enhancements

- Macro updates
- Menu items and tool bar looks better
- Faster literal search, using the Boyer-Moore algorithm (Mike Dillon)
- Menu bar rearranged a little bit
- Improved 'global options' dialog box (Mike Dillon)
- Enhanced help menu
- Files with extension '.php' are now recognized as PHP3 files
- Documentation updates
- .xsd, .xsl, .dtd, .rdf and .rss files are now opened in XML mode
- When closing a buffer, we now switch to the previous, not the last buffer

+ Bug Fixes

- Splash screen wasn't displayed (since 2.3pre1)
- The search and replace setting buttons on the tool bar were always off by
  default (since 2.3pre1)